18069
The following code doesn't compile:
```scala
object Foo { def bar(i: Int) = i }
import Foo.{ bar => quux }
quux _
```
```scala
Welcome to Scala version 2.10.0 (Java HotSpot(TM) 64-Bit Server VM, Java 1.7.0_10).
Type in expressions to have them evaluated.
Type :help for more information.

scala> object Foo { def bar(i: Int) = i }
defined module Foo

scala> import Foo.{ bar => quux }
import Foo.{bar=>quux}

scala> quux _
<console>:10: error: value quux is not a member of object Foo
              quux _
              ^

scala> 
```

Seems like it should?
